<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Preguntas$PlaceholderFragment">


    <TextView
        android:layout_width="317dp"
        android:layout_height="190dp"
        android:layout_marginTop="33dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/indicaciones1"
        android:id="@+id/lbl_pregunta"
        android:layout_gravity="center_horizontal|top" />

    <TextView
        android:layout_width="324dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/indicaciones2"
        android:id="@+id/lbl_indicaciones2"
        android:layout_gravity="center"
        android:layout_below="@+id/lbl_pregunta"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="140dp"
        android:layout_height="70dp"
        android:text="@string/iniciar"
        android:id="@+id/btn_iniciarTestTeorico"
        android:layout_gravity="center_horizontal|bottom"
        android:onClick="ingresar"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
