<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.gustavovargas.movilv20.PreguntasTeoricas">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/numeroPregunta1"
        android:id="@+id/lbPregunta1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="#"
        android:id="@+id/lbl_numeroPregunta"
        android:layout_toEndOf="@+id/lbPregunta1"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/lbPregunta1"
        android:layout_marginLeft="31dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/numeroPregunta2"
        android:id="@+id/lbl_pregunta2"
        android:layout_toEndOf="@+id/lbl_numeroPregunta"
        android:layout_marginLeft="57dp"
        android:layout_above="@+id/lbl_pregunta"
        android:layout_toRightOf="@+id/lbl_numeroPregunta" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="¿ De qué color es la luz que indica que un vehículo  de debe detener en un semaforoÇ"
        android:id="@+id/lbl_pregunta"
        android:layout_below="@+id/lbPregunta1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="33dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/consultarMenu"
        android:id="@+id/btn_consultarManul"
        android:layout_alignBottom="@+id/lbl_pregunta"
        android:textSize="12dp"
        android:layout_alignRight="@+id/lbl_pregunta"
        android:layout_alignEnd="@+id/lbl_pregunta"
        android:layout_toRightOf="@+id/lbl_pregunta2"
        android:layout_toEndOf="@+id/lbl_pregunta2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Respuesta 1"
        android:id="@+id/btn_respuesta1"
        android:layout_below="@+id/btn_consultarManul"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="44dp"
        android:layout_alignRight="@+id/btn_consultarManul"
        android:layout_alignEnd="@+id/btn_consultarManul"
        android:onClick="respuesta1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Respuesta 2"
        android:id="@+id/btn_respuesta2"
        android:layout_below="@+id/btn_respuesta1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="37dp"
        android:layout_alignRight="@+id/btn_respuesta1"
        android:layout_alignEnd="@+id/btn_respuesta1"
        android:onClick="respuesta2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Respuesta 3"
        android:id="@+id/btn_respuesta3"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/btn_respuesta1"
        android:layout_alignEnd="@+id/btn_respuesta1"
        android:onClick="respuesta3" />

</RelativeLayout>
